[tool.poetry]
name = "blackbird"
version = "0.1.0"
description = ""
authors = ["Theo <themistheodoratos@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest-sanic = "^1.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
